[tool.poetry]
name = "nagadpy"
version = "0.1.7"
description = "Python Package To Handle Nagad Paymant Gateway"
authors = ["MahmudulHassan5809 <mahmudul.hassan240@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^41.0.3"
requests = "^2.31.0"
pytz = "^2023.3.post1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
mypy = "^1.5.1"
black = "^23.7.0"
scriv = {extras = ["toml"], version = "^1.3.1"}


[tool.scriv]
format = "md"
version = "literal: nagadpy/__init__.py: __version__"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
